[package]
name = "cranial-coitus"
authors = ["Chase Wilson <me@chasewilson.dev>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"

[dependencies]
ena = "0.14.0"
atty = "0.2.14"
paste = "1.0.5"
ranges = "0.3.3"
anyhow = "1.0.45"
pretty = "0.10.0"
similar = "2.1.0"
clap = "3.0.0-beta.5"
superluminal-perf = "0.1.1"
tracing-subscriber = "0.2.25"
tinyvec = { version = "1.5.0", features = ["alloc"] }
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
tracing = { version = "0.1.29", features = ["release_max_level_info"] }

[profile.release]
debug = 2
lto = "thin"

    [profile.release.package."*"]
    debug = 2
