[package]
name = "cranial-coitus"
authors = ["Chase Wilson <me@chasewilson.dev>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"

[dependencies]
ena = "0.14.0"
atty = "0.2.14"
paste = "1.0.5"
ranges = "0.3.3"
anyhow = "1.0.45"
pretty = "0.11.2"
similar = "2.1.0"
petgraph = "0.6.0"
clap = "3.0.0-beta.5"
superluminal-perf = "0.1.1"
tinyvec = { version = "1.5.0", features = ["alloc"] }
winapi = { version = "0.3.9", features = ["memoryapi"] }
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
tracing-tree = { version = "0.2.0", default-features = false }
tracing = { version = "0.1.29", features = ["release_max_level_info"] }

# Cranelift
cranelift = "0.81.0"
cranelift-jit = "0.81.0"
cranelift-module = "0.81.0"
cranelift-native = "0.81.1"

    [dependencies.iced-x86]
    version = "1.15.0"
    default-features = false
    git = "https://github.com/icedland/iced"
    features = ["std", "masm", "decoder", "encoder", "code_asm", "instr_info"]

    [dependencies.tracing-subscriber]
    version = "0.3.3"
    features = ["env-filter", "registry"]

[dev-dependencies]
expect-test = "1.1.0"

[profile.release]
debug = 2
lto = "thin"

    [profile.release.package."*"]
    debug = 2
